<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:padding="10dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardBackgroundColor="#ccc"
                    card_view:cardCornerRadius="3dp"
                    android:elevation="5dp"
                    card_view:cardUseCompatPadding="true">
                    <RelativeLayout
                        android:id="@+id/layout_donate_food"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/view_bg">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/refer_Entrepreneur"
                            android:textColor="@color/primary_text"
                            android:textSize="25sp"
                            android:typeface="serif"
                            />
                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardBackgroundColor="#ccc"
                    card_view:cardCornerRadius="3dp"
                    android:elevation="5dp"
                    card_view:cardUseCompatPadding="true">
                    <RelativeLayout
                        android:id="@+id/layout_volunteer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/view_bg">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textSize="25sp"
                            android:textColor="@color/primary_text"
                            android:text="@string/find_nearby_Kiosks"
                            android:typeface="serif"
                            />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardBackgroundColor="#ccc"
                    card_view:cardCornerRadius="3dp"
                    android:elevation="5dp"
                    card_view:cardUseCompatPadding="true">
                    <RelativeLayout
                        android:id="@+id/layout_map_a_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/view_bg">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/refer_Location"
                            android:textColor="@color/primary_text"
                            android:textSize="25sp"
                            android:typeface="serif"
                            />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardBackgroundColor="#ccc"
                    card_view:cardCornerRadius="3dp"
                    android:elevation="5dp"
                    card_view:cardUseCompatPadding="true">
                    <RelativeLayout
                        android:id="@+id/layout_FeedBack"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/view_bg">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textSize="25sp"
                            android:textColor="@color/primary_text"
                            android:text="@string/FeedBack"
                            android:typeface="serif"
                            />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardBackgroundColor="#ccc"
                    card_view:cardCornerRadius="3dp"
                    android:elevation="5dp"
                    card_view:cardUseCompatPadding="true">
                    <RelativeLayout
                        android:id="@+id/layout_About_Us"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/view_bg">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/About_Us"
                            android:textColor="@color/primary_text"
                            android:textSize="25sp"
                            android:typeface="serif"
                            />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardBackgroundColor="#ccc"
                    card_view:cardCornerRadius="3dp"
                    android:elevation="5dp"
                    card_view:cardUseCompatPadding="true">
                    <RelativeLayout
                        android:id="@+id/layout_bot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/view_bg">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/chatwithus"
                            android:textColor="@color/primary_text"
                            android:textSize="25sp"
                            android:typeface="serif"
                            />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>


    </LinearLayout>

    </ScrollView>


</LinearLayout>
